# NOVA

./: .gitignore  NOVA_CLIENT.bat  NOVA_SERVER.bat  NOVA_START.bat  NOVA_STOP.bat  README.md  client_config.yaml  pyproject.toml
.cache/: variantB.txt  variantC.ffconcat  variantC.txt  variantC_text.txt  variantD.txt  variantD_text.txt
deploy/: f5_finetune.sh  finetune_prep.py  idle_watchdog.py  onstart.sh  runner.sh
docs/: STATUS.md
docs/plans/: 2026-07-03-nova-stage1-skeleton.md  2026-07-03-nova-stage2-first-voice.md  2026-07-03-nova-voice2-fish.md  2026-07-05-nova-eyes-cloud-voice3.md  2026-07-05-nova-memory.md  2026-07-06-nova-cowatch.md
docs/specs/: 2026-07-03-nova-companion-design.md  2026-07-05-nova-eyes-cloud-voice3.md  2026-07-05-nova-memory-design.md  2026-07-05-social-instinct-notes.md  2026-07-06-nova-cowatch-design.md
nova/client/: audio_in.py  audio_out.py  audio_worker.py  capture.py  capture_worker.py  clip.py  config.py  connection.py  detector.py  main.py  metrics.py  motion.py
nova/server/: game_hints.py  main.py  orchestrator.py  proactive.py  (+1 more)
profiles/: anime.yaml  desktop.yaml
scripts/: sort_voices.py  start_all.py  vast.py  voxcpm2_bench.py
tests/: test_audio_in.py  test_audio_out.py  test_capture.py  test_client_config.py  test_client_main.py  test_clip.py  test_connection.py  test_detector.py  test_fish_tts.py  test_gemini_vision.py  test_gpu_models.py  test_memory_condenser.py  test_memory_recall.py  test_memory_store.py  test_memory_sync.py  test_mock_models.py  test_motion.py  test_orchestrator.py  test_proactive.py  test_profiles.py  test_protocol.py  test_qwen_llm.py  test_server_ws.py  test_tts_text.py  test_vast.py  test_vox_tts.py  test_watchdog.py
(+21 files in other folders)
